@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.455 2005/11/03 13:17:24 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.456 2005/11/04 03:40:20 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
   3 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/gliserv.py:
   httpd now supports HTTPS and falls back to HTTP if not available
+  make fallback actually work
   src/net/server/SecureXMLRPCServer.py:
   SecureSocketServer is now threaded
 
